--- a/androidapp/src/main/AndroidManifest.xml
+++ b/androidapp/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Blogmultiplatform">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.androidapp.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Blogmultiplatform">
