--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
 kotlin.code.style=official
-org.gradle.caching=true
-org.gradle.configuration-cache=true
 android.useAndroidX=true
+org.gradle.jvmargs=-Xmx4096m
